
name:                asm-dsl
version:             0.1.0.0
-- A short (one-line) description of the package.
synopsis:            helpers for building assembly-like EDSLs
description: Helpers for building assembly-like EDSLs
homepage:            https://www.github.com/vdorr/asm-dsl
bug-reports:         https://www.github.com/vdorr/asm-dsl/issues
license:             MIT
license-file:        LICENSE
author:              vdorr
maintainer:          v.dorrich@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
Tested-With:         GHC == 8.0.2

source-repository head
  type:                 git
  location:             git://github.com/vdorr/asm-dsl

Test-Suite t1
  build-depends:     asm-dsl, base >=4.9 && <4.10, mtl >=2.2 && <2.3, template-haskell >=2.11 && <2.12
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Test1.hs
  default-language:  Haskell2010
  GHC-Options:       -Wall -fno-warn-tabs

library
  exposed-modules:   Language.Asm.Example.Tiny, Language.Asm, Language.Asm.TH, Language.Asm.Weave
  -- other-modules:
  other-extensions:  TemplateHaskell, RecursiveDo
  build-depends:     base >=4.9 && <4.10, mtl >=2.2 && <2.3, template-haskell >=2.11 && <2.12
  default-language:  Haskell2010
  GHC-Options:       -Wall -fno-warn-tabs
